feat: add jira oauth flow

--- a/.env.example
+++ b/.env.example
@@ -13,12 +13,22 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 SLACK_CLIENT_ID=your_slack_client_id_here
 SLACK_CLIENT_SECRET=your_slack_client_secret_here
 
+ATLASSIAN_CLIENT_ID=your_atlassian_client_id_here
+ATLASSIAN_CLIENT_SECRET=your_atlassian_client_secret_here
+
 OAUTH_REDIRECT_URI=http://localhost:3000/oauth/callback
 
+# OAuth backend base URL used by the desktop app for /api/oauth/* and token exchange.
+# Default in code is https://pm-os.vercel.app if unset.
+# For local oauth-callback testing, run Next on another port (e.g. 3001)
+# and set OAUTH_BASE_URL=http://localhost:3001
+OAUTH_BASE_URL=https://pm-os.vercel.app
+
 # ============================================
-# Jira/Atlassian Configuration (recommended)
+# Jira/Atlassian Legacy API Token Configuration (optional fallback)
 # ============================================
-# You can configure these via Settings UI or here
+# Jira now supports OAuth and does not require manual API tokens.
+# Keep these only if you want legacy API-token fallback behavior.
 # Settings UI values take precedence over .env values
 
 # Your Atlassian domain (without https://)
@@ -27,7 +37,7 @@ JIRA_DOMAIN=yourcompany.atlassian.net
 # Your email used for Atlassian account
 JIRA_EMAIL=your.email@company.com
 
-# API Token - Generate from: https://id.atlassian.com/manage-profile/security/api-tokens
+# API Token (legacy fallback) - Generate from: https://id.atlassian.com/manage-profile/security/api-tokens
 JIRA_API_TOKEN=your_jira_api_token_here
 
 # Default project key for creating tickets (e.g., AMP, PROJ)
@@ -52,7 +62,7 @@ CONFLUENCE_DEFAULT_PARENT_ID=
 # Setup Instructions
 # ============================================
 # 1. Copy this file: cp .env.example .env
-# 2. Fill in your Jira credentials (required for Jira/Confluence features)
-# 3. Optionally configure OAuth credentials for Google/Slack
+# 2. Configure OAuth credentials (Google/Slack/Atlassian) if running OAuth locally
+# 3. Optionally configure Jira API-token fallback credentials
 # 4. Or configure everything via the Settings UI in the app
 # 5. Settings in the UI will override .env values
